// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip danger should have the correct styles 1`] = `
<div
  class="p-1 text-sm font-display rounded-sm bg-red-600 text-white"
  data-popper-escaped="true"
  data-popper-placement="top"
  data-popper-reference-hidden="true"
  id="test"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
>
  <p
    class="whitespace-nowrap"
  >
    Hello
  </p>
</div>
`;

exports[`Tooltip primary should have the correct styles 1`] = `
<div
  class="p-1 text-sm font-display rounded-sm bg-blue-600 text-white"
  data-popper-escaped="true"
  data-popper-placement="top"
  data-popper-reference-hidden="true"
  id="test"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
>
  <p
    class="whitespace-nowrap"
  >
    Hello
  </p>
</div>
`;

exports[`Tooltip secondary should have the correct styles 1`] = `
<div
  class="p-1 text-sm font-display rounded-sm bg-gray-100 text-gray-600"
  data-popper-escaped="true"
  data-popper-placement="top"
  data-popper-reference-hidden="true"
  id="test"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
>
  <p
    class="whitespace-nowrap"
  >
    Hello
  </p>
</div>
`;

exports[`Tooltip success should have the correct styles 1`] = `
<div
  class="p-1 text-sm font-display rounded-sm bg-green-600 text-white"
  data-popper-escaped="true"
  data-popper-placement="top"
  data-popper-reference-hidden="true"
  id="test"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
>
  <p
    class="whitespace-nowrap"
  >
    Hello
  </p>
</div>
`;

exports[`Tooltip warning should have the correct styles 1`] = `
<div
  class="p-1 text-sm font-display rounded-sm bg-yellow-600 text-white"
  data-popper-escaped="true"
  data-popper-placement="top"
  data-popper-reference-hidden="true"
  id="test"
  role="tooltip"
  style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -10px);"
>
  <p
    class="whitespace-nowrap"
  >
    Hello
  </p>
</div>
`;
